Moving `<script>` back to the `<head>` and adding the `defer` attribute, as recommended by @CrazyTim in the comments under the dev.to article

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" type="text/css" href="./css/sphere.css">
         <link rel="stylesheet" type="text/css" href="./css/fonts.css">
+        <script defer type="text/javascript" src="./js/sphere.js"></script>
     </head>
     <body>
         <!-- GitHub Link Banner, from https://github.com/blog/273-github-ribbons -->
@@ -25,7 +26,5 @@
             <canvas id="canvas" width="800" height="700"></canvas>
             <p class="psst">Psst. There are a couple (that's 2) hidden key combos that do some things that I found by accident, so play around.</p>
         </main>
-
-        <script type="text/javascript" src="./js/sphere.js"></script>
     </body>
 </html>
